# Nizer

./: README.md
Nizer/: .gitignore  CMakeLists.txt  mainwindow.cpp  mainwindow.h
Nizer/HashAlgorithm/: DHash.cpp  Hash.h  PHash.cpp  PHash.h
Nizer/NizerSrc/: CMakeLists.txt
Nizer/NizerSrc/HashAlgorithm/: AHash.cpp  AHash.h  DHash.h  Hash.cpp  Hash.h  HashAlgorithm.cpp  HashAlgorithm.h
Nizer/NizerSrc/Tile/: ClusterTile.cpp  ClusterTile.h  ClusterTile.ui  ImageTile.cpp  ImageTile.h  Tile.cpp  Tile.h  Tile.ui
Nizer/NizerSrc/View/: HomepageView.cpp  HomepageView.h  HomepageView.ui  ImageView.cpp  ImageView.h  ImageView.ui  View.h  ViewStack.h  WelcomeView.cpp  WelcomeView.h  WelcomeView.ui
Nizer/NizerSrc/View/Misc/: AboutUs.cpp  AboutUs.ui  FlowWidget.cpp  FlowWidget.h
Nizer/NizerSrc/resources/: resources.qrc
Nizer/NizerTests/: CMakeLists.txt  CMakeLists.txt.in  QTestCase.cpp  QTestCase.h  main.cpp
Nizer/NizerTests/UnitTest/: SampleQtTest.cpp
Nizer/Tile/: ClusterTile.cpp  ImageTile.cpp  ImageTile.h  ImageTile.ui  Tile.cpp  Tile.h
Nizer/Tile/Tialiarze/: ClusterTile.cpp  ClusterTile.h  ImageTile.cpp
Nizer/View/: AlgorithmSelectionView.cpp  AlgorithmSelectionView.h  HomepageView.cpp  HomepageView.h  HomepageViewUI.ui  View.cpp  View.h  ViewStack.cpp  ViewStack.h  WelcomeView.cpp  WelcomeView.h  WelcomeView.ui  WelcomeViewUI.ui
Nizer/resources/: resources.qrc
docs/design/: design.sketch  welcome_page_design.sketch
docs/design/Homepage/: homepage_design.sketch
docs/design/ImageView/: image_view_design.sketch
docs/design/Welcome Page/: welcome_page_design.sketch
docs/diagrams/Nizer/: README.txt  project.conf
docs/diagrams/Nizer/data/.config/styles/: existingelement.theme  modelio3x.theme  newelement.theme  pattern.theme
docs/diagrams/Nizer/data/fragments/Nizer/model/Infrastructure.DiagramSet/: b6ff9984-296e-43fa-a265-d08b8a6de3df.exml
docs/diagrams/Nizer/data/fragments/Nizer/model/Infrastructure.ModuleComponent/: a349cec2-da6b-4b93-a1eb-6ce629cb983e.exml
docs/diagrams/Nizer/data/fragments/Nizer/model/Infrastructure.Profile/: d0097f02-cfa8-4715-8b5e-e435c331a119.exml
docs/diagrams/Nizer/data/fragments/Nizer/model/Infrastructure.Stereotype/: 371c5bca-b02c-4a7e-bd0b-3ad6c408734d.exml
docs/diagrams/Nizer/data/fragments/Nizer/model/Standard.Activity/: 3bcb1ac4-c1c6-4ee2-aed0-032f34c52d51.exml  9cc1c4d5-9bb8-42b5-9c08-d9bd05236520.exml
docs/diagrams/Nizer/data/fragments/Nizer/model/Standard.ActivityDiagram/: 5fb44b4b-27b7-4b3c-b6e0-a6acff6ab2bd.exml  836b93b7-1d49-4d7c-b9b5-574e31b7723a.exml
docs/diagrams/Nizer/data/fragments/Nizer/model/Standard.Actor/: 63002f89-79e6-47d5-adef-3d5153397bba.exml  70ec4dbe-517b-4dcf-bc40-5d0e43e0c446.exml  77733f25-35de-4bec-82a8-7e470b35cc16.exml  81100ee0-c81d-436e-b447-cc88f4fdd0e4.exml  bc0aeb48-0cad-4bcc-a25b-07512f0eaa96.exml  e4a9bf0a-0f2f-42b8-8188-7b4e5200d6be.exml
docs/diagrams/Nizer/data/fragments/Nizer/model/Standard.Class/: 00487f53-a8bf-42f4-bfb4-1cce707c125a.exml  022ecadb-d9f2-4abe-9a89-b10623dbd25f.exml  0581cf2b-75d1-435e-8f8f-6ea50fb1a63c.exml  097aee7e-63ba-41fd-999e-f3dd5535d0a9.exml  0b008357-808b-4197-b4d2-83af5424cad6.exml  0b121cf8-3c2f-48ac-a561-b3a1d10df256.exml  0df2fc68-1978-4787-b57f-2ef08f61f2c3.exml  0ff45431-b104-44d7-9c46-019a5fda4138.exml  1251e526-b56d-467a-826a-570a5a12fbb1.exml  16758ebc-ab4d-457f-8952-41f7586068e1.exml  171bf317-c76e-4bfd-8bcd-0ef2ceeab89c.exml  186515e7-21e6-4d82-b531-5e6a60188768.exml  1934e3e3-e5d8-4886-8c91-a9b36d9f94cf.exml  196257f2-6eb7-467b-bb13-01679b182f94.exml  19aa6e4a-d95c-4e0d-9833-3e4c5d9b6a7c.exml  1a1c000c-0a68-4ce7-8f7b-a27ec99f4f7c.exml  1b3d4e94-f135-468f-8907-b4e45cca8321.exml  1d0f8232-2189-41f3-aea3-23506943e0e7.exml  1f08f594-4d1e-47fa-84dd-3bb3ed891d2e.exml  1fbcfff9-610e-4bc9-9879-2f1f0e2a8ef0.exml  20902d0b-9bbd-46f9-8ba6-059f3a5027fe.exml  221392fd-fdc0-4dcb-a0b6-8c9dd2174d3d.exml  24e6ce89-874b-427f-b9f7-8a36ee03e7cf.exml  26d2dece-660d-4cbd-8798-6750eaffa7c4.exml  278cec8e-1163-4051-a7a7-02b8cdfabda5.exml  29d97bcc-6383-444f-b86d-66d95bf9047c.exml  2df22d00-a5a6-4e84-8c81-04c44a367ed0.exml  2f8fe663-86d9-4d13-8bc9-9798c6aa7b36.exml  3503b339-72ee-44d5-99a6-1eb6665ca81e.exml  358b71eb-0d36-4489-bd7f-014037f9b027.exml  35b48258-a59f-4d90-abf4-70cedee8ef28.exml  35f8607a-1bd4-4971-bde4-0a4f28700d2e.exml  3828c806-a7d6-4e34-a9d2-3b668d1deb68.exml  38ad83d3-2644-4e53-9706-354818cce464.exml  3bca4bae-a9b0-4a7c-a24b-da642b617edd.exml  3fe2fda5-63aa-4a87-89e4-7cc666963edb.exml  3ff061e8-ef80-4bdc-99d2-680eebc9c9c7.exml  41924051-99a8-4c45-9c4b-473d8c8e3818.exml  48b34570-753d-468a-840f-ad1f3112d11a.exml  498ec8f9-f138-44ca-bcad-cce482c8cd12.exml  (+82 more)
docs/diagrams/Nizer/data/fragments/Nizer/model/Standard.ClassDiagram/: 2d90f144-0d2c-4f74-afc2-10ade13c2f7d.exml  3d0e36d9-00b0-499e-b7e8-1b07f1e067f2.exml  8f362f4d-3a08-4f54-8649-0126c1278ed2.exml  b485466a-e0dd-400b-8fed-4eb2e674f9cb.exml  b5a79ae2-645f-4542-a62c-6326b11df85d.exml  e944398b-2c82-422d-9c3f-18fd5eb17eb8.exml  fa5e24fd-a496-4db8-a01d-ffc25bd91722.exml  feb15eb9-ee53-4d64-a5e6-172748e02541.exml
docs/diagrams/Nizer/data/fragments/Nizer/model/Standard.Component/: 31fe086f-889c-4210-ac5a-11e7a6cf1e0e.exml  35519e07-8fda-46d2-a207-864e8276bf7c.exml
docs/diagrams/Nizer/data/fragments/Nizer/model/Standard.DataType/: 0210919c-4327-4339-8d25-0b05fc55cf66.exml  05569b23-bc56-44e3-99a3-2b71877d1450.exml  06392198-2a8c-4d1a-aff3-3fb4fd2c1f64.exml  0f56ceae-80d1-4d8b-a2f2-43561371bac0.exml  156d4d2a-ab90-436f-977e-7d24f46d3766.exml  15c94d29-9129-4716-948e-83fe90c2b212.exml  15f70af4-263f-4d1e-9f07-8f04f738d284.exml  19a5f83e-0a9f-4803-a880-d1603a7a68a6.exml  1ba26e3e-73ac-4875-b05d-5a6e6928ed3f.exml  1cbfa3c9-08b2-4ca3-9e0d-1a5b83053b9d.exml  215bf131-c162-4781-9eaf-4be50e30c81f.exml  23afcba7-a336-4560-8383-73c4d792aee4.exml  2843d623-a189-4b42-acf2-0ce23a2c3783.exml  2cab3dc7-841f-4f73-8467-784a3bcb96b6.exml  (+56 more)
docs/diagrams/Nizer/data/localmodel/: localmodel.dbf.0  localmodel.dbf.t  localmodel.dbr.0  localmodel.idf.0  localmodel.idf.t  localmodel.idr.0  localmodel.idr.t
(+101 files in other folders)
